# shopping-cli

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  SKILL.md  buyer-demo.json  clawhub.json  docker-compose.yml  hermes-buyer.json  marketplace.example.env  openclaw-seller.json  package.json  pyproject.toml  seller-demo.json
agents/: openai.yaml
docs/: agent-protocol.md  architecture.md  migration-from-shopping.md
plugins/shopping-plugin/: README.md  index.js  openclaw.plugin.json  openclaw_compat.js  package.json
references/: data-schema.md  public-deployment.md  registry-api.md  transaction-model.md
scripts/: install.sh  shopping.py  shopping_agent.py  shopping_api.py  shopping_registry.py  verify.sh
shopping_cli/: __init__.py  cli.py  config.py
shopping_cli/adapters/: __init__.py  diagnostics.py  hermes.py  openclaw.py  shopping_legacy.py
shopping_cli/agents/: __init__.py  agent_cli.py  buyer_cli.py  merchant_agent.py  merchant_daemon.py  tools.py
shopping_cli/api/: __init__.py  app.py  routes_agents.py  routes_conversations.py  routes_marketplace.py  routes_merchants.py  server.py
tests/: shopping_plugin.test.mjs  test_adapter_lifecycle.py  test_agent_daemon.py  test_agent_tools.py  test_cli.py  test_cli_contract.py  test_conversations_agent.py  test_host_adapter_api_e2e.py  test_host_adapter_e2e.py  test_install.py  test_llm_contract.py  test_orchestration_harness.py  test_project_shape.py  test_public_marketplace.py  test_registry.py  test_shopping_cli_mvp.py  test_shopping_transaction_boundary.py
(+16 files in other folders)
